--- a/md_assets_LICENSE.html
+++ b/md_assets_LICENSE.html
@@ -98,7 +98,8 @@ $(document).ready(function(){initNavTree('md_assets_LICENSE.html',''); initResiz
   <div class="headertitle"><div class="title">LICENSE </div></div>
 </div><!--header-->
 <div class="contents">
-<div class="textblock"><p >All Rights Reserved Copyright (c) 2025 Phantaemon </p>
+<div class="textblock"><p >All Rights Reserved Copyright (c) 2025 Phantaemon</p>
+<p >DISCLAIMER THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO ANY WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT OF COPYRIGHT, PATENT, TRADEMARK, OR OTHER RIGHT. IN NO EVENT SHALL THE COPYRIGHT HOLDER BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, INCLUDING ANY GENERAL, SPECIAL, INDIRECT, INCIDENTAL, OR CONSEQUENTIAL DAMAGES, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF THE USE OR INABILITY TO USE THE FONT SOFTWARE OR FROM OTHER DEALINGS IN THE FONT SOFTWARE. </p>
 </div></div><!-- contents -->
 </div><!-- PageDoc -->
 </div><!-- doc-content -->
